Wed Jan  7 07:40:41 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_math.inl:
          Changed floor() and ceil() to use corresponding native functions
          by default.

Tue Jan  6 19:27:24 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
        * rpmbuild/ace-tao-ciao.txt:
        * rpmbuild/ace-tao.spec:
        * rpmbuild/ace-tao.txt:
          Made ace-tao-ciao the main spec file, the ace-tao one is created
          by Ken Sedgwick which uses that one for Fedora but which we don't
          use because it doesn't work with SuSE/CentOS/Mandriva. Hopefully
          on the long term Ken will use the ace-tao-ciao file

Mon Jan  5 15:33:24 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_vxworks6.2.GNU:
        * include/makeinclude/platform_vxworks6.3.GNU:

          Removed the vxe file from the GENERATED_DIRTY list, this silences
          the GNU make warnings for "circular dependencies" on all executable
          projects that run the idl compiler.

Mon Jan  5 09:37:38 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_math.inl:
          Changed floor() and ceil() not to use == to compare floating
          point values. This removes compile time warnings if gcc's
          -Wfloat-equal option is enabled.

        * tests/OS_Test.cpp:
          Added tests for floor() and ceil().

Sun Jan  4 10:47:27 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*:
          Updated for next 1.6.8 micro release

Sun Jan  4 03:55:27 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Service_Gestalt.cpp (process_directives): Ensure that the
          number of failed services is returned.  Thanks to Milan
          Cvetkovic <milan dot cvetkovic at mpathix dot com> for
          contributing this.

Fri Jan  2 15:38:31 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/platform_sunos5_g++.GNU:
